panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__struct__test_error_incompatible_redeclaration.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/struct/test_error_incompatible_redeclaration.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/struct/test_error_incompatible_redeclaration.c"
   (struct T~0
      (member x @0 `int`))
   (struct T~0
      (member l @0 `long`)))

----- stderr -----
